@@ -1,6 +1,8 @@
 Membrane ESB Change Log
 =============================================================================
 
+* [bugfix] correctly handle repeated (background) init of GroovyInterceptor
+
 * [new] added <soapProxy wsdl="..."> to avoid having to configure
   a "/services/service(|\?wsdl|\?xsd=.*)"-style regex on a
   SOAP <serviceProxy>.
